feature(authors): User can add author as favourite - Create endpoint to add author - Document the feature
